--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <i class="fa-brands fa-facebook"></i> Facebook
             </a>
             <a href="https://www.instagram.com/t.kaizen/" target="_blank">
-                <i class="fa-brands fa-discord"></i> Instagram
+                <i class="fa-brands fa-instagram"></i> Instagram
             </a>
             <a href="https://www.linkedin.com/in/jhun-lloyd-boyles-386896339/" target="_blank">
                 <i class="fa-brands fa-linkedin"></i> LinkedIn
