--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <a href="https://discord.gg/NpCEeUAZvg" target="_blank">
                 <i class="fa-brands fa-discord"></i> Discord Server
             </a>
+            <a href="https://www.youtube.com/@TKaizen421" target="_blank">
+                <i class="fa-brands fa-youtube"></i> Youtube
+            </a>
 
         </div>
         
