made a folder for pfp

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- Profile Section -->
         <div class="profile">
-            <img src="Me.jpg" alt="Loyd's Profile Picture">
+            <img src="/pic/me.jpg" alt="Loyd's Profile Picture">
         </div>
         
         <!-- Heading -->
